build!: raise the compile baseline to Java 21 and restore the reverted language features
Reverses the Java 17 cross-compile downgrade (#80) now that the supported floor
moves to the current LTS. The toolchain stays at 25; only --release rises.

- options.release 17 -> 21 in all 14 module build files; @SupportedSourceVersion
  RELEASE_17 -> RELEASE_21 on the five annotation processors; README JVM badge
  17+ -> 21+.
- Pattern-match switch expressions restored over the sealed hierarchies in
  Either, Validated, EitherK, ValidatedK, DeepMap, and ValidatedOrderController;
  the "unreachable" fallthrough throws are gone (exhaustiveness is
  compiler-checked). Record patterns restored in Validated.combine,
  ValidatedK.map2, and DeepMap.
- Sequenced Collections: getFirst() restored across the codegen processors,
  example demos, and tests; positional get(0)/get(1) pairs (Map key/value type
  arguments) intentionally stay indexed.
- try-with-resources on ExecutorService restored in BoundedAsyncTest and the
  Telescope javadoc example.
- BridgeProcessor emits a pattern-match switch for sealed-bridge dispatch again;
  BridgeProcessorTest assertions updated. Generated navigators and bridges now
  require consumers to compile at 21+.
- Telescope.BridgeTelescope returns to private (the Java 17 sealed-permits
  accessibility workaround is no longer needed).

BREAKING CHANGE: consumers on Java 17-20 can no longer run telescope; the
runtime floor is Java 21, and code generated by telescope-codegen requires
-source 21+ downstream. Unnamed variables (_, JEP 456) stay out of scope - they
need Java 22+ and the floor is deliberately the LTS.

Closes #217